--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chai": "^4.1.2",
     "chai-string": "^1.4.0",
     "clear": "^0.1.0",
+    "del": "^3.0.0",
     "docdash": "^0.4.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
@@ -38,7 +39,8 @@
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-uglify-es": "^0.0.1",
     "sinon": "^6.1.3",
-    "source-map-support": "^0.5.6"
+    "source-map-support": "^0.5.6",
+    "vinyl-paths": "^2.1.0"
   },
   "dependencies": {
     "jsep": "^0.3.4"
