--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "gulp-mocha": "^6.0.0",
     "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
+    "moxios": "^0.4.0",
+    "query-string": "^6.1.0",
     "rollup": "^0.62.0",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
@@ -43,6 +45,8 @@
     "vinyl-paths": "^2.1.0"
   },
   "dependencies": {
-    "jsep": "^0.3.4"
+    "axios": "^0.18.0",
+    "jsep": "^0.3.4",
+    "needle": "^2.2.1"
   }
 }
