Several Fixes and Improvements
- Added MySql expression generation
- Added specialized AstValue to format special values such as fields or
identifiers.
- Added default request options to extend Rest axios request data before the request goes out.
- Preparing to replace rollup as it doesn't seem to play nice with
webpack on bloom-ui react project.

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "bloom-orm",
   "version": "1.0.0",
   "description": "An orm layer for bloom ui",
-  "main": "dist/bloom-orm.cjs.js",
+  "main": "index.js",
   "module": "dist/bloom-orm.esm.js",
+  "common": "dist/bloom-orm.cjs.js",
   "browser": "dist/bloom-orm.umd.js",
   "author": "Felipe Orellana<forellana@digithinkit.com>",
   "license": "MIT",
